# simple-encrypter

./: .gitignore  CMakeLists.txt  Makefile  README.md  argsHandling.c  argsHandling.h  criptData.c  criptData.h  dec.cpp  enc.cpp  fileHandling.c  fileHandling.h  include.h  main.c  simple-enc
include/: include.h
src/: argsHandling.c  criptData.c  fileHandling.c  main.c
